i can't solve this error! ----- error: there is no unique or exclusion constraint matching the ON CONFLICT specification     at Connection.parseE (/mnt/c/Users/Moriah/Desktop/curry-petition/node_modules/pg/lib/connection.js:567:11)     at Connection.parseMessage (/mnt/c/Users/Moriah/Desktop/curry-petition/node_modules/pg/lib/connection.js:391:17)     at Socket.<anonymous> (/mnt/c/Users/Moriah/Desktop/curry-petition/node_modules/pg/lib/connection.js:129:22)     at Socket.emit (events.js:198:13)     at addChunk (_stream_readable.js:288:12)     at readableAddChunk (_stream_readable.js:269:11)     at Socket.Readable.push (_stream_readable.js:224:10)     at TCP.onStreamRead [as onread] (internal/stream_base_commons.js:94:17) (node:9477) UnhandledPromiseRejectionWarning: Unhandled promise rejection. This error originated either by throwing inside of an async function without a catch block, or by rejecting a promise which was not handled with .catch(). (rejection id: 1) (node:9477) [DEP0018] DeprecationWarning: Unhandled promise rejections are deprecated. In the future, promise rejections that are not handled will terminate the Node.js process with a non-zero exit code.

--- a/public/style.css
+++ b/public/style.css
@@ -77,8 +77,10 @@ a,
     font-size: 22px;
 }
 #main_img {
+    text-align: center;
     padding-top: 10px;
     max-width: 830px;
+    overflow: hidden;
 }
 #signature {
     border: 1px dashed #ccc;
